Fix add-to-cal button on mobile chrome on production
For some reason this is only broken in this exact combo. The width is being set to 0px so the options never appear. This forces them to be the size we expect.

--- a/src/scss/components/_atcb.scss
+++ b/src/scss/components/_atcb.scss
@@ -11,6 +11,7 @@
 }
 .atcb-list-wrapper {
   padding: 0;
+  width: 186.648px !important;
 }
 .atcb-button.atcb-active:not(.atcb-modal-style,.atcb-dropoverlay),
 .atcb-button.atcb-single:focus, .atcb-button.atcb-single:hover,
